--- a/src/App.css
+++ b/src/App.css
@@ -76,13 +76,16 @@
   padding-bottom: 1em;
 }
 
-.country_display:nth-child(odd),
+.country_display:nth-child(odd) {
+  background-color: rgb(142, 5, 110);
+}
+
 .country_display:nth-child(even) {
   background-color: rgb(142, 5, 110);
 }
 
 .main {
-  display: inline-block;
+  float: inline-start;
   padding: 3em;
   color: #fff;
 }
@@ -94,8 +97,6 @@
 .self_display {
   margin-top: 1rem;
   height: 90vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
 }
 
@@ -103,9 +104,7 @@
   color: #fff;
   text-align: center;
   background-color: rgb(152, 2, 102);
-  font-size: 1.5em;
-  padding: 1em;
-  margin: 0;
+  font-size: 15px;
 }
 
 .arrow-right {
